<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AlphieOne">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="Addition"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/a_one_intro"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                />

            <!--Addition-->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:text="@string/a_one"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                </LinearLayout>


            </ScrollView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_one_conclusion"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_gravity="center"
                />

            <!--Multiplication-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="Multiplication"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/a_one_intro_mult"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                />
            <ScrollView
                android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/a_one_mult"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
            </ScrollView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_one_conclusion_mult"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_gravity="center"
            />

            <!--Subtraction-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="Subtraction"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/a_one_intro_sub"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:text="@string/a_one_sub"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </ScrollView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_one_conclusion_sub"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_gravity="center"
                />

            <!--Division-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="Division"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/a_one_intro_div"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:text="@string/a_one_div"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </ScrollView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_one_conclusion_div"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_gravity="center"
                />

            <!--Final Word-->

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doneButton"
                android:onClick="startAlphieExamples"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>