<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DerivativeExamples">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Examples"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/derivative_example_one"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/derivative_example_two"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/derivative_example_three"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/derivative_example_four"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/derivative_example"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"/>


        </LinearLayout>
    </ScrollView>


</LinearLayout>