<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DevishNotes">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter_two"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:gravity="center"
        />
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@android:color/black"
               android:text="@string/devish_intro"
               android:textSize="16sp"/>


       </LinearLayout>
   </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Axioms"
        android:id="@+id/btnAxiomVisibility"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollVisibility"
        android:visibility="invisible">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
               <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. "
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/devish_axiom_one"
                    android:textSize="12sp"
                    android:textColor="@android:color/black"/>
            </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2. "
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devish_axiom_two"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3. "
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devish_axiom_three"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4. "
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devish_axiom_four"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5. "
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devish_axiom_five"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>